--- a/scss/sections/_category.scss
+++ b/scss/sections/_category.scss
@@ -5,13 +5,14 @@
   gap: 6px;
   display: flex;
   background: #030d15;
-  padding-top: 30px;
+  padding-top: 70px;
   .category-info {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 12px;
-    margin-bottom: 38px;
+    margin-top: 12px;
+    margin-bottom: 15px;
     .service {
       color: #a6a6a6;
       font-size: 16px;
@@ -32,12 +33,12 @@
   .category-cards {
     width: 100%;
     margin: 0 auto;
+    padding-bottom: 80px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
 
     gap: 28px;
-    padding: 16px;
 
     .category-item {
       display: flex;
