--- a/scss/sections/_hero.scss
+++ b/scss/sections/_hero.scss
@@ -1,6 +1,6 @@
 .hero-section {
-  margin-top: 320px;
   width: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -8,21 +8,21 @@
   gap: 16px;
   .hero-bg {
     position: absolute;
-    z-index: -1;
+    z-index: -2;
     right: 0;
     left: 0;
     top: 0px;
-    .Image7 {
+    .gif {
       width: 100%;
-      height: 100vh;
       left: 0px;
       top: 0px;
-      position: absolute;
+      bottom: -20px;
       background: radial-gradient(
         111.74% 111.74% at 56.56% 55.87%,
         rgba(5, 14, 23, 0) 0%,
         #030d15 100%
       );
+      z-index: -1;
     }
   }
   .container {
@@ -33,8 +33,6 @@
       justify-content: center;
       align-items: center;
       gap: 16px;
-      margin-top: -40px;
-      margin-bottom: 180px;
       .hero-h1 {
         width: 855px;
         color: #fff;
