--- a/scss/style.css
+++ b/scss/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 * {
   margin: 0;
@@ -5,12 +6,22 @@
   box-sizing: border-box;
 }
 
+header.sticky {
+  transition: 0.3s ease;
+  padding: 0px 0px;
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+  pointer-events: none;
+}
+
 .header {
   position: fixed;
   top: 0;
   right: 0;
   left: 0;
+  padding: 10px 0px;
   background: transparent;
+  transition: 0.3s;
   z-index: 101;
 }
 .header .container .header-wrapper {
@@ -29,40 +40,60 @@
 .header .container .header-wrapper .Frame1 {
   justify-content: flex-start;
   align-items: center;
-  gap: 16px;
+  gap: 23px;
   display: flex;
 }
-.header .container .header-wrapper .Frame1 .AboutUs,
-.header .container .header-wrapper .Frame1 .Services,
-.header .container .header-wrapper .Frame1 .Clients,
-.header .container .header-wrapper .Frame1 .IndustriesServed,
-.header .container .header-wrapper .Frame1 .ContactUs {
+.header .container .header-wrapper .Frame1 a {
+  text-decoration: none;
   opacity: 0.7;
   color: white;
   font-size: 16px;
   font-family: Inter;
   font-weight: 500;
   word-wrap: break-word;
+  padding: 8px;
+  border-radius: 10px;
+  border: 1px solid transparent;
+  transition: 0.3s;
 }
-.header .container .header-wrapper .Frame7 {
-  width: 132px;
-  padding-left: 24px;
-  padding-right: 24px;
-  padding-top: 12px;
-  padding-bottom: 12px;
-  background: white;
-  border-radius: 6px;
-  justify-content: flex-start;
-  align-items: center;
-  gap: 6px;
-  display: flex;
+.header .container .header-wrapper .Frame1 a:hover {
+  color: white;
+  border-color: aliceblue;
+  transition: 0.3s;
 }
-.header .container .header-wrapper .Frame7 .ContactUs {
-  color: #172129;
-  font-size: 16px;
-  font-family: Inter;
-  font-weight: 500;
-  word-wrap: break-word;
+.header .container .header-wrapper .Contact-btn {
+  display: inline-block;
+  border-radius: 9px;
+  background-color: #2d2d3f;
+  border: none;
+  color: #ffffff;
+  text-align: center;
+  font-size: 17px;
+  padding: 14px;
+  width: 130px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+.header .container .header-wrapper .Contact-btn:hover .span {
+  padding-right: 15px;
+}
+.header .container .header-wrapper .Contact-btn:hover .span:after {
+  opacity: 1;
+  right: 378px;
+  color: #ffffff;
+}
+.header .container .header-wrapper .Contact-btn .span {
+  transition: 0.3s;
+  transform: translateX(-9px);
+}
+.header .container .header-wrapper .Contact-btn .span:after {
+  content: "»";
+  position: absolute;
+  opacity: 0;
+  top: 45px;
+  right: 374px;
+  transition: 0.5s;
 }
 
 .container {
@@ -72,8 +103,8 @@
 }
 
 .hero-section {
-  margin-top: 320px;
   width: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -82,18 +113,18 @@
 }
 .hero-section .hero-bg {
   position: absolute;
-  z-index: -1;
+  z-index: -2;
   right: 0;
   left: 0;
   top: 0px;
 }
-.hero-section .hero-bg .Image7 {
+.hero-section .hero-bg .gif {
   width: 100%;
-  height: 100vh;
   left: 0px;
   top: 0px;
-  position: absolute;
+  bottom: -20px;
   background: radial-gradient(111.74% 111.74% at 56.56% 55.87%, rgba(5, 14, 23, 0) 0%, #030d15 100%);
+  z-index: -1;
 }
 .hero-section .container .hero-wrapper {
   width: 100%;
@@ -102,8 +133,6 @@
   justify-content: center;
   align-items: center;
   gap: 16px;
-  margin-top: -40px;
-  margin-bottom: 180px;
 }
 .hero-section .container .hero-wrapper .hero-h1 {
   width: 855px;
@@ -132,14 +161,15 @@
   gap: 6px;
   display: flex;
   background: #030d15;
-  padding-top: 30px;
+  padding-top: 70px;
 }
 .category-section .category-info {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 12px;
-  margin-bottom: 38px;
+  margin-top: 12px;
+  margin-bottom: 15px;
 }
 .category-section .category-info .service {
   color: #a6a6a6;
@@ -160,11 +190,11 @@
 .category-section .category-cards {
   width: 100%;
   margin: 0 auto;
+  padding-bottom: 80px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   gap: 28px;
-  padding: 16px;
 }
 .category-section .category-cards .category-item {
   display: flex;
@@ -337,26 +367,31 @@
   margin-top: -141px;
   margin-bottom: -144px;
 }
-.contact-section .contactImg {
+.contact-section .contact-gif {
   width: 100%;
   position: absolute;
   right: 0;
   left: 0;
+  z-index: -1;
+}
+.contact-section .contact-gif #gif1 {
+  width: 100%;
 }
 .contact-section .container .contact-wrapper {
-  display: flex;
-  margin: 200px auto 200px auto;
-  transform: scale(1);
-  padding: 30px;
   width: 35%;
-  background: rgba(102, 123, 141, 0.053);
-  border-radius: 16px;
-  -webkit-backdrop-filter: blur(12px);
-          backdrop-filter: blur(12px);
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 26px;
+  margin: 200px auto 200px auto;
+  padding: 30px;
+  background: rgba(23, 33, 41, 0.0823529412);
+  transform: scale(1);
+  border-radius: 16px;
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+  pointer-events: none;
 }
 .contact-section .container .contact-wrapper .contact-info {
   flex-direction: column;
