--- a/scss/utilities/_container.scss
+++ b/scss/utilities/_container.scss
@@ -3,3 +3,108 @@
   margin: 0 auto;
   padding: 15px;
 }
+@media (max-width: 1590px) {
+  .container {
+    width: 1230px;
+  }
+}
+// @media (max-width: 1570px) {
+//   .container {
+//     width: 1210px;
+//   }
+// }
+// @media (max-width: 1550px) {
+//   .container {
+//     width: 1190px;
+//   }
+// }
+// @media (max-width: 1530px) {
+//   .container {
+//     width: 1170px;
+//   }
+// }
+// @media (max-width: 1510px) {
+//   .container {
+//     width: 1150px;
+//   }
+// }
+// @media (max-width: 1490px) {
+//   .container {
+//     width: 1130px;
+//   }
+// }
+// @media (max-width: 1470px) {
+//   .container {
+//     width: 1110px;
+//   }
+// }
+// @media (max-width: 1450px) {
+//   .container {
+//     width: 1090px;
+//   }
+// }
+// @media (max-width: 1430px) {
+//   .container {
+//     width: 1070px;
+//   }
+// }
+// @media (max-width: 1410px) {
+//   .container {
+//     width: 1050px;
+//   }
+// }
+// @media (max-width: 1390px) {
+//   .container {
+//     width: 1030px;
+//   }
+// }
+// @media (max-width: 1370px) {
+//   .container {
+//     width: 1010px;
+//   }
+// }
+// @media (max-width: 1350px) {
+//   .container {
+//     width: 990px;
+//   }
+// }
+// @media (max-width: 1230px) {
+//   .container {
+//     width: 970px;
+//   }
+// }
+// @media (max-width: 1210px) {
+//   .container {
+//     width: 950px;
+//   }
+// }
+// @media (max-width: 1190px) {
+//   .container {
+//     width: 930px;
+//   }
+// }
+// @media (max-width: 1170px) {
+//   .container {
+//     width: 910px;
+//   }
+// }
+// @media (max-width: 1150px) {
+//   .container {
+//     width: 890px;
+//   }
+// }
+// @media (max-width: 1130px) {
+//   .container {
+//     width: 870px;
+//   }
+// }
+// @media (max-width: 1110px) {
+//   .container {
+//     width: 850px;
+//   }
+// }
+// @media (max-width: 1090px) {
+//   .container {
+//     width: 920px; //830
+//   }
+// }
