--- a/scss/sections/_process.scss
+++ b/scss/sections/_process.scss
@@ -146,4 +146,15 @@
     }
   }
 }
+.swiper-container {
+  width: 1340px;
+}
+
+.swiper-slide {
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  height: 350px;
+}
+
 /* Other styles for Frame6 */
