--- a/scss/style.css
+++ b/scss/style.css
@@ -4,6 +4,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  transition-duration: 0.3s;
 }
 
 header.sticky {
@@ -93,7 +94,7 @@ header.sticky {
   content: "»";
   position: absolute;
   opacity: 0;
-  top: 30px;
+  top: 40px;
   right: 372px;
   transition: 0.5s;
 }
@@ -104,6 +105,11 @@ header.sticky {
   padding: 15px;
 }
 
+@media (max-width: 1590px) {
+  .container {
+    width: 1230px;
+  }
+}
 .hero-section {
   width: 100%;
   height: 100vh;
@@ -156,6 +162,14 @@ header.sticky {
   line-height: 24px;
 }
 
+@media (max-width: 1499px) {
+  .hero-section {
+    margin-bottom: -22px;
+  }
+  .hero-section .hero-bg .gif {
+    width: 100%;
+  }
+}
 .category-section {
   flex-direction: column;
   justify-content: flex-start;
