--- a/scss/style.css
+++ b/scss/style.css
@@ -374,6 +374,17 @@ header.sticky {
   border-radius: 12px;
 }
 
+.swiper-container {
+  width: 1340px;
+}
+
+.swiper-slide {
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  height: 350px;
+}
+
 /* Other styles for Frame6 */
 .contact-section {
   width: 100%;
