--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -25,6 +25,8 @@ header.sticky {
       justify-content: space-between;
       align-items: center;
       flex-direction: row;
+
+      gap: 130px;
       .Alfacell {
         color: white;
         font-size: 18px;
@@ -32,13 +34,10 @@ header.sticky {
         font-weight: 700;
         text-transform: uppercase;
       }
-
-      .Frame1 {
-        justify-content: flex-start;
-        align-items: center;
-        gap: 23px;
+      .nav-links {
+        // display: none;
         display: flex;
-
+        gap: 18px;
         a {
           text-decoration: none;
           opacity: 0.7;
@@ -57,66 +56,644 @@ header.sticky {
         }
       }
 
-      .Contact-btn {
+      .Contact-btn1 {
         display: inline-block;
         border-radius: 9px;
         background-color: #2d2d3f;
-        border: none;
+        border: 1px solid transparent;
         color: #ffffff;
         text-align: center;
         font-size: 17px;
         padding: 8px 13px;
-        width: 130px;
+        width: 140px;
         transition: all 0.5s;
         cursor: pointer;
         margin: 5px;
         &:hover {
+          border-color: #ffffff;
           .span {
             padding-right: 15px;
             &:after {
+              transition: 0.3s;
+              content: "»";
+              position: absolute;
               opacity: 1;
-              right: 378px;
-              color: #ffffff;
+
+              transform: translateX(8px);
             }
           }
         }
         .span {
           font-family: sans-serif;
-          transition: 0.3s;
-          transform: translateX(-9px);
           &:after {
+            transition: 0.3s;
+
             content: "»";
             position: absolute;
+            transform: translateX(-4px);
             opacity: 0;
-            top: 40px;
-            right: 372px;
-            transition: 0.5s;
+          }
+        }
+        // .span {
+        //   font-family: sans-serif;
+        //   transition: 0.3s;
+        //   transform: translateX(-9px);
+        //   &:after {
+        //     content: "»";
+        //     position: relative;
+        //     opacity: 0;
+        //     top: 0px;
+        //     right: 0px;
+        //     transition: 0.5s;
+        //   }
+        // }
+      }
+
+      #menuBtn {
+        display: none;
+      }
+      .menu-bg {
+        display: none;
+      }
+      .menu-links {
+        display: none;
+        a {
+          text-decoration: none;
+          opacity: 0.7;
+          color: white;
+          font-size: 16px;
+          font-family: Inter;
+          font-weight: 500;
+          padding: 8px 8px;
+          border-radius: 10px;
+          border: 1px solid transparent;
+          transition: 0.3s;
+          &:hover {
+            border-color: aliceblue;
+            transition: 0.3s;
+          }
+        }
+        .Contact-btn {
+          display: inline-block;
+          border-radius: 9px;
+          background-color: #2d2d3f;
+          border: 1px solid transparent;
+          color: #ffffff;
+          text-align: center;
+          font-size: 17px;
+          padding: 8px 13px;
+          width: 90%;
+          transition: all 0.5s;
+          cursor: pointer;
+          margin: 5px;
+          &:hover {
+            border-color: aliceblue;
+            transition: 0.3s;
+            .span {
+              padding-right: 15px;
+              &:after {
+                transition: 0.3s;
+                content: "»";
+                position: absolute;
+                opacity: 1;
+
+                transform: translateX(8px);
+              }
+            }
+          }
+          .span {
+            &:after {
+              transition: 0.3s;
+
+              content: "»";
+              position: absolute;
+              transform: translateX(-4px);
+              opacity: 0;
+            }
+          }
+        }
+      }
+      .social-media {
+        display: none;
+      }
+    }
+  }
+}
+
+@media (max-width: 1100px) {
+  .header {
+    .container {
+      width: 1000px;
+    }
+  }
+}
+@media (max-width: 1008px) {
+  .header {
+    .container {
+      width: 982px;
+    }
+  }
+}
+@media (max-width: 980px) {
+  .header {
+    .container {
+      width: 960px;
+      .header-wrapper {
+        .menu-links {
+          transform: translate(0%, 0%);
+        }
+      }
+    }
+  }
+}
+@media (max-width: 985px) {
+  .header {
+    .container {
+      width: 920px;
+      .header-wrapper {
+        width: 100%;
+        .nav-links {
+          display: none;
+        }
+        .Contact-btn1 {
+          display: none;
+        }
+        .menu-links {
+          width: 40%;
+          height: 400px;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          gap: 12px;
+          position: fixed;
+          top: 50%;
+          right: 0%;
+          transform: translate(100%, -50%);
+          a {
+            width: 90%;
+            text-align: center;
+            opacity: 1;
+            font-size: 20px;
+            padding: 9px 9px;
+          }
+          .Contact-btn1 {
+            width: 90%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+          }
+        }
+
+        #menuBtn {
+          width: 40px;
+          height: 30px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: column;
+          outline: none;
+          border: none;
+          background: transparent;
+          gap: 6px;
+          span {
+            width: 30px;
+            height: 2px;
+            background: white;
+          }
+        }
+        .menu-bg.header-w-bg {
+          display: block;
+          transition: 0.3s;
+          position: fixed;
+          top: 0;
+          right: 0%;
+          bottom: 0;
+          width: 40%;
+
+          height: auto;
+          background: #00000009;
+          backdrop-filter: blur(10px);
+          z-index: -1;
+          transition: 0.3s;
+        }
+        .social-media {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          gap: 34px;
+          position: fixed;
+
+          width: 100%;
+          bottom: -26%;
+          // right: 0;
+          svg {
+            display: flex;
           }
         }
       }
     }
   }
 }
+@media (max-width: 702px) {
+  .header {
+    .container {
+      width: 830px;
+      .header-wrapper {
+        .menu-links {
+          width: 50%;
+        }
+        .Contact-btn {
+          display: none;
+        }
 
-// @media (max-width: 1498px) {
-//   .header.sticky {
-//   }
-//   .header {
-//     .container {
-//       .header-wrapper {
-//         .Alfacell {
-//         }
-//         .Frame1 {
-//           a {
-//           }
-//         }
-//         .Contact-btn {
-//           .span {
-//             &:after {
-//             }
-//           }
-//         }
-//       }
-//     }
-//   }
-// }
+        .menu-bg.header-w-bg {
+          width: 50%;
+        }
+      }
+    }
+  }
+}
+@media (max-width: 589px) {
+  .header {
+    .container {
+      // width: 830px;
+      .header-wrapper {
+        .menu-links {
+          width: 55%;
+        }
+        .Contact-btn {
+          display: none;
+        }
+
+        .menu-bg.header-w-bg {
+          width: 55%;
+        }
+      }
+    }
+  }
+}
+@media (max-width: 569px) {
+  .header {
+    .container {
+      // width: 830px;
+      .header-wrapper {
+        .menu-links {
+          width: 57%;
+        }
+        .Contact-btn {
+          display: none;
+        }
+
+        .menu-bg.header-w-bg {
+          width: 57%;
+        }
+      }
+    }
+  }
+}
+@media (max-width: 549px) {
+  .header {
+    .container {
+      // width: 830px;
+      .header-wrapper {
+        .menu-links {
+          width: 59%;
+        }
+        .Contact-btn {
+          display: none;
+        }
+
+        .menu-bg.header-w-bg {
+          width: 59%;
+        }
+      }
+    }
+  }
+}
+@media (max-width: 500px) {
+  .header {
+    .container {
+      // width: 830px;
+      .header-wrapper {
+        .menu-links {
+          width: 100%;
+        }
+        .Contact-btn {
+          display: none;
+        }
+
+        .menu-bg.header-w-bg {
+          width: 100%;
+        }
+      }
+    }
+  }
+}
+
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 12px;
+  position: absolute;
+  top: 50%;
+  right: 50%;
+  transform: translate(50%, -50%);
+  h1 {
+    text-align: center;
+    font-family: sans-serif;
+  }
+  .typewriter {
+    --blue: #5c86ff;
+    --blue-dark: #275efe;
+    --key: #fff;
+    --paper: #eef0fd;
+    --text: #d3d4ec;
+    --tool: #fbc56c;
+    --duration: 3s;
+    position: relative;
+    -webkit-animation: bounce05 var(--duration) linear infinite;
+    animation: bounce05 var(--duration) linear infinite;
+  }
+
+  .typewriter .slide {
+    width: 92px;
+    height: 20px;
+    border-radius: 3px;
+    margin-left: 14px;
+    transform: translateX(14px);
+    background: linear-gradient(var(--blue), var(--blue-dark));
+    -webkit-animation: slide05 var(--duration) ease infinite;
+    animation: slide05 var(--duration) ease infinite;
+  }
+
+  .typewriter .slide:before,
+  .typewriter .slide:after,
+  .typewriter .slide i:before {
+    content: "";
+    position: absolute;
+    background: var(--tool);
+  }
+
+  .typewriter .slide:before {
+    width: 2px;
+    height: 8px;
+    top: 6px;
+    left: 100%;
+  }
+
+  .typewriter .slide:after {
+    left: 94px;
+    top: 3px;
+    height: 14px;
+    width: 6px;
+    border-radius: 3px;
+  }
+
+  .typewriter .slide i {
+    display: block;
+    position: absolute;
+    right: 100%;
+    width: 6px;
+    height: 4px;
+    top: 4px;
+    background: var(--tool);
+  }
+
+  .typewriter .slide i:before {
+    right: 100%;
+    top: -2px;
+    width: 4px;
+    border-radius: 2px;
+    height: 14px;
+  }
+
+  .typewriter .paper {
+    position: absolute;
+    left: 24px;
+    top: -26px;
+    width: 40px;
+    height: 46px;
+    border-radius: 5px;
+    background: var(--paper);
+    transform: translateY(46px);
+    -webkit-animation: paper05 var(--duration) linear infinite;
+    animation: paper05 var(--duration) linear infinite;
+  }
+
+  .typewriter .paper:before {
+    content: "";
+    position: absolute;
+    left: 6px;
+    right: 6px;
+    top: 7px;
+    border-radius: 2px;
+    height: 4px;
+    transform: scaleY(0.8);
+    background: var(--text);
+    box-shadow: 0 12px 0 var(--text), 0 24px 0 var(--text), 0 36px 0 var(--text);
+  }
+
+  .typewriter .keyboard {
+    width: 120px;
+    height: 56px;
+    margin-top: -10px;
+    z-index: 1;
+    position: relative;
+  }
+
+  .typewriter .keyboard:before,
+  .typewriter .keyboard:after {
+    content: "";
+    position: absolute;
+  }
+
+  .typewriter .keyboard:before {
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    border-radius: 7px;
+    background: linear-gradient(135deg, var(--blue), var(--blue-dark));
+    transform: perspective(10px) rotateX(2deg);
+    transform-origin: 50% 100%;
+  }
+
+  .typewriter .keyboard:after {
+    left: 2px;
+    top: 25px;
+    width: 11px;
+    height: 4px;
+    border-radius: 2px;
+    box-shadow: 15px 0 0 var(--key), 30px 0 0 var(--key), 45px 0 0 var(--key),
+      60px 0 0 var(--key), 75px 0 0 var(--key), 90px 0 0 var(--key),
+      22px 10px 0 var(--key), 37px 10px 0 var(--key), 52px 10px 0 var(--key),
+      60px 10px 0 var(--key), 68px 10px 0 var(--key), 83px 10px 0 var(--key);
+    -webkit-animation: keyboard05 var(--duration) linear infinite;
+    animation: keyboard05 var(--duration) linear infinite;
+  }
+
+  @keyframes bounce05 {
+    85%,
+    92%,
+    100% {
+      transform: translateY(0);
+    }
+
+    89% {
+      transform: translateY(-4px);
+    }
+
+    95% {
+      transform: translateY(2px);
+    }
+  }
+
+  @keyframes slide05 {
+    5% {
+      transform: translateX(14px);
+    }
+
+    15%,
+    30% {
+      transform: translateX(6px);
+    }
+
+    40%,
+    55% {
+      transform: translateX(0);
+    }
+
+    65%,
+    70% {
+      transform: translateX(-4px);
+    }
+
+    80%,
+    89% {
+      transform: translateX(-12px);
+    }
+
+    100% {
+      transform: translateX(14px);
+    }
+  }
+
+  @keyframes paper05 {
+    5% {
+      transform: translateY(46px);
+    }
+
+    20%,
+    30% {
+      transform: translateY(34px);
+    }
+
+    40%,
+    55% {
+      transform: translateY(22px);
+    }
+
+    65%,
+    70% {
+      transform: translateY(10px);
+    }
+
+    80%,
+    85% {
+      transform: translateY(0);
+    }
+
+    92%,
+    100% {
+      transform: translateY(46px);
+    }
+  }
+
+  @keyframes keyboard05 {
+    5%,
+    12%,
+    21%,
+    30%,
+    39%,
+    48%,
+    57%,
+    66%,
+    75%,
+    84% {
+      box-shadow: 15px 0 0 var(--key), 30px 0 0 var(--key), 45px 0 0 var(--key),
+        60px 0 0 var(--key), 75px 0 0 var(--key), 90px 0 0 var(--key),
+        22px 10px 0 var(--key), 37px 10px 0 var(--key), 52px 10px 0 var(--key),
+        60px 10px 0 var(--key), 68px 10px 0 var(--key), 83px 10px 0 var(--key);
+    }
+
+    9% {
+      box-shadow: 15px 2px 0 var(--key), 30px 0 0 var(--key),
+        45px 0 0 var(--key), 60px 0 0 var(--key), 75px 0 0 var(--key),
+        90px 0 0 var(--key), 22px 10px 0 var(--key), 37px 10px 0 var(--key),
+        52px 10px 0 var(--key), 60px 10px 0 var(--key), 68px 10px 0 var(--key),
+        83px 10px 0 var(--key);
+    }
+
+    18% {
+      box-shadow: 15px 0 0 var(--key), 30px 0 0 var(--key), 45px 0 0 var(--key),
+        60px 2px 0 var(--key), 75px 0 0 var(--key), 90px 0 0 var(--key),
+        22px 10px 0 var(--key), 37px 10px 0 var(--key), 52px 10px 0 var(--key),
+        60px 10px 0 var(--key), 68px 10px 0 var(--key), 83px 10px 0 var(--key);
+    }
+
+    27% {
+      box-shadow: 15px 0 0 var(--key), 30px 0 0 var(--key), 45px 0 0 var(--key),
+        60px 0 0 var(--key), 75px 0 0 var(--key), 90px 0 0 var(--key),
+        22px 12px 0 var(--key), 37px 10px 0 var(--key), 52px 10px 0 var(--key),
+        60px 10px 0 var(--key), 68px 10px 0 var(--key), 83px 10px 0 var(--key);
+    }
+
+    36% {
+      box-shadow: 15px 0 0 var(--key), 30px 0 0 var(--key), 45px 0 0 var(--key),
+        60px 0 0 var(--key), 75px 0 0 var(--key), 90px 0 0 var(--key),
+        22px 10px 0 var(--key), 37px 10px 0 var(--key), 52px 12px 0 var(--key),
+        60px 12px 0 var(--key), 68px 12px 0 var(--key), 83px 10px 0 var(--key);
+    }
+
+    45% {
+      box-shadow: 15px 0 0 var(--key), 30px 0 0 var(--key), 45px 0 0 var(--key),
+        60px 0 0 var(--key), 75px 0 0 var(--key), 90px 2px 0 var(--key),
+        22px 10px 0 var(--key), 37px 10px 0 var(--key), 52px 10px 0 var(--key),
+        60px 10px 0 var(--key), 68px 10px 0 var(--key), 83px 10px 0 var(--key);
+    }
+
+    54% {
+      box-shadow: 15px 0 0 var(--key), 30px 2px 0 var(--key),
+        45px 0 0 var(--key), 60px 0 0 var(--key), 75px 0 0 var(--key),
+        90px 0 0 var(--key), 22px 10px 0 var(--key), 37px 10px 0 var(--key),
+        52px 10px 0 var(--key), 60px 10px 0 var(--key), 68px 10px 0 var(--key),
+        83px 10px 0 var(--key);
+    }
+
+    63% {
+      box-shadow: 15px 0 0 var(--key), 30px 0 0 var(--key), 45px 0 0 var(--key),
+        60px 0 0 var(--key), 75px 0 0 var(--key), 90px 0 0 var(--key),
+        22px 10px 0 var(--key), 37px 10px 0 var(--key), 52px 10px 0 var(--key),
+        60px 10px 0 var(--key), 68px 10px 0 var(--key), 83px 12px 0 var(--key);
+    }
+
+    72% {
+      box-shadow: 15px 0 0 var(--key), 30px 0 0 var(--key),
+        45px 2px 0 var(--key), 60px 0 0 var(--key), 75px 0 0 var(--key),
+        90px 0 0 var(--key), 22px 10px 0 var(--key), 37px 10px 0 var(--key),
+        52px 10px 0 var(--key), 60px 10px 0 var(--key), 68px 10px 0 var(--key),
+        83px 10px 0 var(--key);
+    }
+
+    81% {
+      box-shadow: 15px 0 0 var(--key), 30px 0 0 var(--key), 45px 0 0 var(--key),
+        60px 0 0 var(--key), 75px 0 0 var(--key), 90px 0 0 var(--key),
+        22px 10px 0 var(--key), 37px 12px 0 var(--key), 52px 10px 0 var(--key),
+        60px 10px 0 var(--key), 68px 10px 0 var(--key), 83px 10px 0 var(--key);
+    }
+  }
+}
