--- a/scss/sections/_hero.scss
+++ b/scss/sections/_hero.scss
@@ -1,5 +1,7 @@
 .hero-section {
-  width: 100%;
+  // width: 100%;
+  position: relative;
+  overflow: hidden;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -12,16 +14,11 @@
     right: 0;
     left: 0;
     top: 0px;
+    width: 100%;
+    height: 100vh;
     .gif {
       width: 100%;
-      left: 0px;
-      top: 0px;
-      bottom: -20px;
-      background: radial-gradient(
-        111.74% 111.74% at 56.56% 55.87%,
-        rgba(5, 14, 23, 0) 0%,
-        #030d15 100%
-      );
+      height: auto;
       z-index: -1;
     }
   }
@@ -43,35 +40,636 @@
         font-weight: 500;
         line-height: 94px; /* 117.5% */
       }
-      .hero-p {
-        width: 520px;
-        text-align: center;
-        color: white;
-        font-size: 16px;
-        font-family: sans-serif;
-
-        font-weight: 400;
-        line-height: 24px;
-      }
     }
   }
 }
 
 @media (max-width: 1499px) {
   .hero-section {
-    margin-bottom: -22px;
+    position: relative;
+    overflow: hidden;
     .hero-bg {
+      // position: absolute;
+      // top: 0px;
+      // right: 0%;
+      // left: 0;
+      // bottom: 0%;
+      // overflow: hidden;
+      width: 100%;
+      height: 100vh;
       .gif {
         width: 100%;
+        height: inherit;
+        // top: 0;
+        transform: scale(1.1);
       }
     }
-    // .container {
-    //   .hero-wrapper {
-    //     .hero-h1 {
-    //     }
-    //     .hero-p {
-    //     }
-    //   }
-    // }
+    .container {
+      .hero-wrapper {
+        .hero-h1 {
+          width: 70%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
+      }
+    }
+  }
+}
+@media (max-width: 1396px) {
+  .hero-section {
+    position: relative;
+    overflow: hidden;
+    .hero-bg {
+      position: absolute;
+      top: 0px;
+      right: 0%;
+      left: 0;
+      bottom: 0%;
+      overflow: hidden;
+      width: 100%;
+      height: 100vh;
+      .gif {
+        width: 100%;
+        height: inherit;
+        // top: 0;
+        transform: scale(1.2);
+      }
+    }
+    .container {
+      .hero-wrapper {
+        .hero-h1 {
+          width: 70%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
+      }
+    }
+  }
+}
+@media (max-width: 1231px) {
+  .hero-section {
+    position: relative;
+    overflow: hidden;
+    .hero-bg {
+      position: absolute;
+      top: 0px;
+      right: 0%;
+      left: 0;
+      bottom: 0%;
+      overflow: hidden;
+      width: 100%;
+      height: 100vh;
+      .gif {
+        width: 100%;
+        height: inherit;
+        // top: 0;
+        transform: scale(1.3);
+      }
+    }
+    .container {
+      .hero-wrapper {
+        .hero-h1 {
+          width: 100%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
+      }
+    }
+  }
+}
+@media (max-width: 1166px) {
+  .hero-section {
+    .hero-bg {
+      width: 100%;
+      height: 100vh;
+      .gif {
+        width: 100%;
+        height: inherit;
+        // top: 0;
+        transform: scale(1.3);
+      }
+    }
+    .container {
+      .hero-wrapper {
+        .hero-h1 {
+          width: 80%;
+          line-height: 110px;
+        }
+      }
+    }
+  }
+}
+@media (max-width: 1166px) {
+  .hero-section {
+    .hero-bg {
+      width: 100%;
+      height: 100vh;
+      .gif {
+        width: 100%;
+        height: inherit;
+        // top: 0;
+        transform: scale(1.4);
+      }
+    }
+    .container {
+      .hero-wrapper {
+        .hero-h1 {
+          width: 80%;
+          line-height: 110px;
+        }
+      }
+    }
+  }
+}
+@media (max-width: 1160px) {
+  .hero-section {
+    .hero-bg {
+      width: 100%;
+      height: 100vh;
+      .gif {
+        width: 100%;
+        height: inherit;
+        // top: 0;
+        transform: scale(1.5);
+      }
+    }
+    .container {
+      .hero-wrapper {
+        .hero-h1 {
+          width: 80%;
+
+          line-height: 110px;
+        }
+      }
+    }
+  }
+}
+@media (max-width: 1005px) {
+  .hero-section {
+    .hero-bg {
+      width: 100%;
+      height: 100vh;
+      .gif {
+        width: 100%;
+        height: inherit;
+        // top: 0;
+        transform: scale(1.6);
+      }
+    }
+    .container {
+      .hero-wrapper {
+        .hero-h1 {
+          width: 80%;
+
+          line-height: 110px;
+        }
+      }
+    }
+  }
+}
+@media (max-width: 935px) {
+  .hero-section {
+    .hero-bg {
+      width: 100%;
+      height: 100vh;
+      .gif {
+        width: 100%;
+        height: inherit;
+        // top: 0;
+        transform: scale(1.7);
+      }
+    }
+  }
+}
+@media (max-width: 910px) {
+  .hero-section {
+    .container {
+      .hero-wrapper {
+        .hero-h1 {
+          width: 90%;
+          font-size: 60px;
+          font-weight: 600;
+        }
+      }
+    }
+  }
+}
+@media (max-width: 891px) {
+  .hero-section {
+    .hero-bg {
+      width: 100%;
+      height: 100vh;
+      .gif {
+        width: 100%;
+        height: inherit;
+        // top: 0;
+        transform: scale(1.8);
+      }
+    }
+    .container {
+      .hero-wrapper {
+        .hero-h1 {
+          font-weight: 700;
+        }
+      }
+    }
+  }
+}
+@media (max-width: 862px) {
+  .hero-section {
+    .hero-bg {
+      width: 100%;
+      height: 100vh;
+      .gif {
+        width: 100%;
+        height: inherit;
+        // top: 0;
+        transform: scale(1.9);
+      }
+    }
+    .container {
+      .hero-wrapper {
+        .hero-h1 {
+          font-weight: 700;
+        }
+      }
+    }
+  }
+}
+@media (max-width: 808px) {
+  .hero-section {
+    .hero-bg {
+      width: 100%;
+      height: 100vh;
+      .gif {
+        width: 100%;
+        height: inherit;
+        // top: 0;
+        transform: scale(2);
+      }
+    }
+    .container {
+      .hero-wrapper {
+        .hero-h1 {
+          font-weight: 700;
+        }
+      }
+    }
+  }
+}
+@media (max-width: 750px) {
+  .hero-section {
+    .container {
+      .hero-wrapper {
+        .hero-h1 {
+          width: 80%;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          font-size: 50px;
+          transform: translate(-50%, -50%);
+        }
+      }
+    }
+  }
+}
+@media (max-width: 653px) {
+  .hero-section {
+    .hero-bg {
+      .hero-bg {
+        .gif {
+          transform: scale(2.3);
+        }
+      }
+    }
+    .container {
+      .hero-wrapper {
+        .hero-h1 {
+          width: 80%;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          font-size: 50px;
+          transform: translate(-50%, -50%);
+        }
+      }
+    }
+  }
+}
+@media (max-width: 651px) {
+  .hero-section {
+    .hero-bg {
+      .gif {
+        transform: scale(2.4);
+      }
+    }
+    .container {
+      .hero-wrapper {
+        .hero-h1 {
+          width: 80%;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          font-size: 50px;
+          transform: translate(-50%, -50%);
+        }
+      }
+    }
+  }
+}
+@media (max-width: 634px) {
+  .hero-section {
+    .hero-bg {
+      width: 100%;
+      height: 100vh;
+      .gif {
+        width: 100%;
+        height: inherit;
+        // top: 0;
+        transform: scale(2.1);
+      }
+    }
+    .container {
+      .hero-wrapper {
+        .hero-h1 {
+          font-weight: 700;
+        }
+      }
+    }
+  }
+}
+@media (max-width: 620px) {
+  .hero-section {
+    .hero-bg {
+      width: 100%;
+      height: 100vh;
+      .gif {
+        width: 100%;
+        height: inherit;
+        // top: 0;
+        transform: scale(2.2);
+      }
+    }
+    .container {
+      .hero-wrapper {
+        .hero-h1 {
+          font-weight: 700;
+        }
+      }
+    }
+  }
+}
+@media (max-width: 596px) {
+  .hero-section {
+    .hero-bg {
+      width: 100%;
+      height: 100vh;
+      .gif {
+        width: 100%;
+        height: inherit;
+        // top: 0;
+        transform: scale(2);
+      }
+    }
+    .container {
+      .hero-wrapper {
+        .hero-h1 {
+          font-weight: 700;
+        }
+      }
+    }
+  }
+}
+@media (max-width: 592px) {
+  .hero-section {
+    .hero-bg {
+      width: 100%;
+      height: 100vh;
+      .gif {
+        width: 100%;
+        height: inherit;
+        // top: 0;
+        transform: scale(2.2);
+      }
+    }
+    .container {
+      .hero-wrapper {
+        .hero-h1 {
+          font-weight: 700;
+        }
+      }
+    }
+  }
+}
+@media (max-width: 569px) {
+  .hero-section {
+    .hero-bg {
+      width: 100%;
+      height: 100vh;
+      .gif {
+        width: 100%;
+        height: inherit;
+        // top: 0;
+        transform: scale(2.1);
+      }
+    }
+    .container {
+      .hero-wrapper {
+        .hero-h1 {
+          font-weight: 700;
+        }
+      }
+    }
+  }
+}
+@media (max-width: 540px) {
+  .hero-section {
+    .hero-bg {
+      width: 100%;
+      height: 100vh;
+      .gif {
+        width: 100%;
+        height: inherit;
+        // top: 0;
+        transform: scale(2.2);
+      }
+    }
+    .container {
+      .hero-wrapper {
+        .hero-h1 {
+          font-weight: 700;
+          line-height: 80px;
+        }
+      }
+    }
+  }
+}
+@media (max-width: 519px) {
+  .hero-section {
+    .hero-bg {
+      width: 100%;
+      height: 100vh;
+      .gif {
+        width: 100%;
+        height: inherit;
+        // top: 0;
+        transform: scale(2.3);
+      }
+    }
+    .container {
+      .hero-wrapper {
+        .hero-h1 {
+          font-weight: 700;
+          line-height: 80px;
+        }
+      }
+    }
+  }
+}
+@media (max-width: 589px) {
+  .hero-section {
+    .hero-bg {
+      width: 100%;
+      height: 100vh;
+      .gif {
+        width: 100%;
+        height: inherit;
+        // top: 0;
+        transform: scale(2.6);
+      }
+    }
+    .container {
+      .hero-wrapper {
+        .hero-h1 {
+          font-weight: 700;
+          line-height: 80px;
+        }
+      }
+    }
+  }
+}
+@media (max-width: 593px) {
+  .hero-section {
+    .hero-bg {
+      width: 100%;
+      height: 100vh;
+      .gif {
+        width: 100%;
+        height: inherit;
+        // top: 0;
+        transform: scale(2.65);
+      }
+    }
+    .container {
+      .hero-wrapper {
+        .hero-h1 {
+          font-weight: 700;
+          line-height: 80px;
+        }
+      }
+    }
+  }
+}
+@media (max-width: 428px) {
+  .hero-section {
+    .hero-bg {
+      width: 100%;
+      height: 100vh;
+      .gif {
+        width: 100%;
+        height: inherit;
+        // top: 0;
+        transform: scale(2.8);
+      }
+    }
+    .container {
+      .hero-wrapper {
+        .hero-h1 {
+          font-weight: 700;
+          line-height: 80px;
+        }
+      }
+    }
+  }
+}
+@media (max-width: 407px) {
+  .hero-section {
+    .hero-bg {
+      width: 100%;
+      height: 100vh;
+      .gif {
+        width: 100%;
+        height: inherit;
+        // top: 0;
+        transform: scale(3);
+      }
+    }
+    .container {
+      .hero-wrapper {
+        .hero-h1 {
+          font-weight: 700;
+          line-height: 80px;
+        }
+      }
+    }
+  }
+}
+@media (max-width: 389px) {
+  .hero-section {
+    .hero-bg {
+      width: 100%;
+      height: 100vh;
+      .gif {
+        width: 100%;
+        height: inherit;
+        // top: 0;
+        transform: scale(3.6);
+      }
+    }
+    .container {
+      .hero-wrapper {
+        .hero-h1 {
+          font-weight: 700;
+          line-height: 80px;
+          font-size: 43px;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 315px) {
+  .hero-section {
+    .hero-bg {
+      .gif {
+        transform: scale(3.6);
+      }
+    }
+    .container {
+      width: 300px;
+      .hero-wrapper {
+        .hero-h1 {
+          width: 90%;
+          font-size: 37px;
+          line-height: 60px;
+          font-weight: 700;
+        }
+      }
+    }
   }
 }
