--- a/scss/sections/_hero.scss
+++ b/scss/sections/_hero.scss
@@ -44,6 +44,103 @@
   }
 }
 
+@media (min-width: 2531px) {
+  .hero-section {
+    // width: 100%;
+    position: relative;
+    overflow: hidden;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+    .hero-bg {
+      position: absolute;
+      z-index: -2;
+      right: 0;
+      left: 0;
+      top: 0px;
+      width: 100%;
+      height: 100vh;
+      .gif {
+        width: 100%;
+        height: auto;
+        z-index: -1;
+      }
+    }
+    .container {
+      width: 80%;
+      .hero-wrapper {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 16px;
+        .hero-h1 {
+          width: 60%;
+          color: #fff;
+          text-align: center;
+          font-family: sans-serif;
+          font-size: 130px;
+          font-style: normal;
+          font-weight: 500;
+          line-height: 174px; /* 117.5% */
+        }
+      }
+    }
+  }
+}
+@media (min-width: 1891px) {
+  .hero-section {
+    // width: 100%;
+    position: relative;
+    overflow: hidden;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+    .hero-bg {
+      position: absolute;
+      z-index: -2;
+      right: 0;
+      left: 0;
+      top: 0px;
+      width: 100%;
+      height: 100vh;
+      .gif {
+        width: 100%;
+        height: auto;
+        z-index: -1;
+      }
+    }
+    .container {
+      width: 80%;
+      .hero-wrapper {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 16px;
+        .hero-h1 {
+          width: 80%;
+          color: #fff;
+          text-align: center;
+          font-family: sans-serif;
+          font-size: 120px;
+          font-style: normal;
+          font-weight: 500;
+          line-height: 174px; /* 117.5% */
+        }
+      }
+    }
+  }
+}
+
 @media (max-width: 1499px) {
   .hero-section {
     position: relative;
@@ -174,28 +271,7 @@
     }
   }
 }
-@media (max-width: 1166px) {
-  .hero-section {
-    .hero-bg {
-      width: 100%;
-      height: 100vh;
-      .gif {
-        width: 100%;
-        height: inherit;
-        // top: 0;
-        transform: scale(1.4);
-      }
-    }
-    .container {
-      .hero-wrapper {
-        .hero-h1 {
-          width: 80%;
-          line-height: 110px;
-        }
-      }
-    }
-  }
-}
+
 @media (max-width: 1160px) {
   .hero-section {
     .hero-bg {
