--- a/scss/style.css
+++ b/scss/style.css
@@ -163,14 +163,39 @@ header.sticky {
   display: none;
 }
 
+@media (min-width: 2531px) {
+  .header {
+    transform: scale(2);
+    top: 30px;
+  }
+  .header .container .header-wrapper {
+    justify-content: center;
+    gap: 180px;
+  }
+}
+@media (min-width: 1891px) {
+  .header {
+    transform: scale(2);
+    top: 30px;
+  }
+  .header .container .header-wrapper {
+    justify-content: center;
+    gap: 120px;
+  }
+}
 @media (max-width: 1100px) {
   .header .container {
     width: 1000px;
   }
 }
-@media (max-width: 1008px) {
+@media (max-width: 1110px) {
   .header .container {
-    width: 982px;
+    width: 1000px;
+  }
+}
+@media (max-width: 1010px) {
+  .header .container {
+    width: 992px;
   }
 }
 @media (max-width: 980px) {
@@ -330,9 +355,9 @@ header.sticky {
   padding: 15px;
 }
 
-@media (max-width: 1590px) {
+@media (max-width: 2561px) {
   .container {
-    width: 1230px;
+    width: 80%;
   }
 }
 .hero-section {
@@ -378,6 +403,100 @@ header.sticky {
   line-height: 94px; /* 117.5% */
 }
 
+@media (min-width: 2531px) {
+  .hero-section {
+    position: relative;
+    overflow: hidden;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+  }
+  .hero-section .hero-bg {
+    position: absolute;
+    z-index: -2;
+    right: 0;
+    left: 0;
+    top: 0px;
+    width: 100%;
+    height: 100vh;
+  }
+  .hero-section .hero-bg .gif {
+    width: 100%;
+    height: auto;
+    z-index: -1;
+  }
+  .hero-section .container {
+    width: 80%;
+  }
+  .hero-section .container .hero-wrapper {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+  }
+  .hero-section .container .hero-wrapper .hero-h1 {
+    width: 60%;
+    color: #fff;
+    text-align: center;
+    font-family: sans-serif;
+    font-size: 130px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 174px; /* 117.5% */
+  }
+}
+@media (min-width: 1891px) {
+  .hero-section {
+    position: relative;
+    overflow: hidden;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+  }
+  .hero-section .hero-bg {
+    position: absolute;
+    z-index: -2;
+    right: 0;
+    left: 0;
+    top: 0px;
+    width: 100%;
+    height: 100vh;
+  }
+  .hero-section .hero-bg .gif {
+    width: 100%;
+    height: auto;
+    z-index: -1;
+  }
+  .hero-section .container {
+    width: 80%;
+  }
+  .hero-section .container .hero-wrapper {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+  }
+  .hero-section .container .hero-wrapper .hero-h1 {
+    width: 80%;
+    color: #fff;
+    text-align: center;
+    font-family: sans-serif;
+    font-size: 120px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 174px; /* 117.5% */
+  }
+}
 @media (max-width: 1499px) {
   .hero-section {
     position: relative;
@@ -474,21 +593,6 @@ header.sticky {
     width: 100%;
     height: inherit;
     transform: scale(1.3);
-  }
-  .hero-section .container .hero-wrapper .hero-h1 {
-    width: 80%;
-    line-height: 110px;
-  }
-}
-@media (max-width: 1166px) {
-  .hero-section .hero-bg {
-    width: 100%;
-    height: 100vh;
-  }
-  .hero-section .hero-bg .gif {
-    width: 100%;
-    height: inherit;
-    transform: scale(1.4);
   }
   .hero-section .container .hero-wrapper .hero-h1 {
     width: 80%;
