--- a/scss/utilities/_container.scss
+++ b/scss/utilities/_container.scss
@@ -3,11 +3,18 @@
   margin: 0 auto;
   padding: 15px;
 }
-@media (max-width: 1590px) {
+
+@media (max-width: 2561px) {
   .container {
-    width: 1230px;
+    width: 80%;
   }
 }
+
+// @media (max-width: 1590px) {
+//   .container {
+//     width: 1230px;
+//   }
+// }
 // @media (max-width: 1570px) {
 //   .container {
 //     width: 1210px;
